<resources>
    <string name="app_name">iTubeApp</string>
    <string name="username">username:</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="youtube_url">YouTube URL:</string>
    <string name="play">PLAY</string>
    <string name="my_playlist">MY PLAYLIST</string>
    <string name="add_to_playlist">ADD TO PLAYLIST</string>
    <string name="back_button">back button</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="create_account">Create account</string>
    <string name="this_will_be_a_url">this will be a url</string>
</resources>