<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube_url" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/url_input" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/play_button"
            android:text="@string/play"
            android:layout_marginTop="50dp"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_to_playlist_button"
            android:text="@string/add_to_playlist"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/my_playlist_button"
            android:text="@string/my_playlist"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>